# how-to-hack-github-actions

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat
.github/workflows/: build.yml  files.yml
cmake/: embedded.cmake  utility.cmake
projects/cpp/app/bootstrapper/: CMakeLists.txt
projects/cpp/app/bootstrapper/include/: README.md  fx_muxer.h
projects/cpp/app/bootstrapper/src/: main.cpp
projects/cpp/app/codeinjector/: CMakeLists.txt
projects/cpp/app/codeinjector/include/: README.md
projects/cpp/app/codeinjector/src/: main.cpp
projects/cpp/obfuscation/dump-exports/: CMakeLists.txt
projects/cpp/obfuscation/dump-exports/src/: main.cpp
projects/cpp/obfuscation/fakekernel32/: CMakeLists.txt
projects/cpp/obfuscation/fakekernel32/include/: README.md
projects/cpp/obfuscation/hash/: CMakeLists.txt
projects/cpp/obfuscation/hash/include/: adler32.h
projects/cpp/obfuscation/loader/: CMakeLists.txt
projects/cpp/obfuscation/loader/include/: loader.h
projects/csharp/patcher/: CMakeLists.txt  clean.bat  patcher.sln
projects/csharp/patcher/patcher/: Main.cs  patcher.csproj
projects/rust/: CMakeLists.txt
projects/rust/dump-assembly/: CMakeLists.txt  Cargo.toml
projects/rust/dump-assembly/src/: assembly_header.txt  main.rs
projects/rust/shellgen/: CMakeLists.txt  Cargo.toml
projects/rust/shellgen/src/: exception_directory.rs  main.rs  shellcode_header.txt
scripts/: server.py
