[package]
name = "shellgen"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.7"
pretty-hex = "0.2.1"
pelite = "0.9.0"
iced-x86 = { version = "1.15.0", features = ["code_asm"] }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
strip = "symbols"
debug = false
panic = "abort"
opt-level = "z"
codegen-units = 1
